Fixed two issues with the measurements. Aperture photometry was incorrectly determining the center of the field because of rounding (recent regression). Re-processing of 12+ bit .lc files would return zeros when PSF photometry was used.

--- a/Tangra.Model/Tangra.Model.csproj
+++ b/Tangra.Model/Tangra.Model.csproj
@@ -117,6 +117,7 @@
     <Compile Include="Helpers\AllGrayPens.cs" />
     <Compile Include="Helpers\AngleUtility.cs" />
     <Compile Include="Helpers\AstroConvert.cs" />
+    <Compile Include="Helpers\DebugContext.cs" />
     <Compile Include="Helpers\Extensions.cs" />
     <Compile Include="Helpers\PositionMemento.cs" />
     <Compile Include="Helpers\TangraCore.cs" />
