Added support for a "Custom Dynamic Range" display mode.

--- a/Tangra 3/Tangra 3.Windows.csproj
+++ b/Tangra 3/Tangra 3.Windows.csproj
@@ -310,6 +310,12 @@
       <DependentUpon>ucCorrSelection.cs</DependentUpon>
     </Compile>
     <Compile Include="VideoTools\BackgroundModelGenerator.cs" />
+    <Compile Include="VideoTools\frmDefineDisplayDynamicRange.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="VideoTools\frmDefineDisplayDynamicRange.Designer.cs">
+      <DependentUpon>frmDefineDisplayDynamicRange.cs</DependentUpon>
+    </Compile>
     <Compile Include="VideoTools\frmFileInformation.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -677,6 +683,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="VideoOperations\LightCurves\ucCorrSelection.resx">
       <DependentUpon>ucCorrSelection.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="VideoTools\frmDefineDisplayDynamicRange.resx">
+      <DependentUpon>frmDefineDisplayDynamicRange.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="VideoTools\frmFileInformation.resx">
       <DependentUpon>frmFileInformation.cs</DependentUpon>
