Made it possible to run IOTA-VTI OCR recognition against bitmap sequence of files produced from a submitted OCD error report.

--- a/.gitignore
+++ b/.gitignore
@@ -106,3 +106,4 @@ _ReSharper.*
 /AdvLib.Core/AdvLib.Core.vcxproj.user
 /AdvLib.Core/AdvLib_Win32.mk
 /AdvLib.Core/.build-release
+/OcrTester/AutomatedTestingImages/testbed
