--- a/Tangra.KweeVanWoerden/Tangra.EclipsingBinaries.csproj
+++ b/Tangra.KweeVanWoerden/Tangra.EclipsingBinaries.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Tangra.KweeVanWoerden</RootNamespace>
-    <AssemblyName>Tangra.KweeVanWoerden</AssemblyName>
+    <AssemblyName>Tangra.EclipsingBinaries</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,6 +41,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="frmAddinConfig.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmAddinConfig.Designer.cs">
+      <DependentUpon>frmAddinConfig.cs</DependentUpon>
+    </Compile>
     <Compile Include="KweeVanWoerdenAddin.cs" />
     <Compile Include="KweeVanWoerdenMinimum.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -57,6 +63,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="frmAddinConfig.resx">
+      <DependentUpon>frmAddinConfig.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resource.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resource.Designer.cs</LastGenOutput>
@@ -67,8 +76,11 @@
     <None Include="FortranCode\Kwee_Van_Woerden_Main_Program.f90" />
     <None Include="FortranCode\Kwee_Van_Woerden_Subroutine.f90" />
     <None Include="Resources\EclipsingBinaries.ico" />
+    <EmbeddedResource Include="Resources\Input_Observations.bin" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Resources\Input_Observations.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>xcopy "$(TargetPath)" "$(SolutionDir)Tangra 3\bin\$(ConfigurationName)\Addins\" /Y
