--- a/Tangra 3/Properties/Settings.settings
+++ b/Tangra 3/Properties/Settings.settings
@@ -17,5 +17,11 @@
     <Setting Name="AddinSettings" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="LicenseDialogAcknowledged" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="UsageStatistics" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
