--- a/Tangra 3/app.config
+++ b/Tangra 3/app.config
@@ -22,6 +22,12 @@
             <setting name="AddinSettings" serializeAs="String">
                 <value />
             </setting>
+            <setting name="LicenseDialogAcknowledged" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="UsageStatistics" serializeAs="String">
+                <value />
+            </setting>
         </Tangra.Properties.Settings>
     </userSettings>
     <system.serviceModel>
