--- a/Tangra 3/app.config
+++ b/Tangra 3/app.config
@@ -28,6 +28,9 @@
             <setting name="UsageStatistics" serializeAs="String">
                 <value />
             </setting>
+            <setting name="UsageStatsLastSent" serializeAs="String">
+                <value>2014-12-01</value>
+            </setting>
         </Tangra.Properties.Settings>
     </userSettings>
     <system.serviceModel>
