--- a/Tangra 3/Tangra 3.Windows.csproj
+++ b/Tangra 3/Tangra 3.Windows.csproj
@@ -309,6 +309,12 @@
     <Compile Include="VideoOperations\LightCurves\MutualEvents\frmAddOrEditMutualEventsTarget.Designer.cs">
       <DependentUpon>frmAddOrEditMutualEventsTarget.cs</DependentUpon>
     </Compile>
+    <Compile Include="VideoOperations\LightCurves\Report\frmChooseTimesToReport.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="VideoOperations\LightCurves\Report\frmChooseTimesToReport.Designer.cs">
+      <DependentUpon>frmChooseTimesToReport.cs</DependentUpon>
+    </Compile>
     <Compile Include="VideoOperations\LightCurves\Tracking\MutualEventTracker.cs" />
     <Compile Include="VideoOperations\LightCurves\ucCorrSelection.cs">
       <SubType>UserControl</SubType>
@@ -691,6 +697,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="VideoOperations\LightCurves\MutualEvents\frmAddOrEditMutualEventsTarget.resx">
       <DependentUpon>frmAddOrEditMutualEventsTarget.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="VideoOperations\LightCurves\Report\frmChooseTimesToReport.resx">
+      <DependentUpon>frmChooseTimesToReport.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="VideoOperations\LightCurves\ucCorrSelection.resx">
       <DependentUpon>ucCorrSelection.cs</DependentUpon>
