--- a/Tangra.KweeVanWoerden/Tangra.OccultingBinaries.csproj
+++ b/Tangra.KweeVanWoerden/Tangra.OccultingBinaries.csproj
@@ -71,6 +71,7 @@
     </Compile>
     <Compile Include="KweeVanWoerdenAddin.cs" />
     <Compile Include="KweeVanWoerdenMinimum.cs" />
+    <Compile Include="ModelFitter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resource.Designer.cs">
       <AutoGen>True</AutoGen>
