Added time format configuration for CSV exports. Fixed tracking refining on AAV files from first frame. Implemented settings export and import. Renames 'System Time' labels to 'PC Clock Time' for AAV/ADV files.

--- a/Tangra 3/Tangra 3.Windows.csproj
+++ b/Tangra 3/Tangra 3.Windows.csproj
@@ -297,6 +297,13 @@
     <Compile Include="Helpers\TangraFileAssociations.cs" />
     <Compile Include="Helpers\UsageStats.cs" />
     <Compile Include="Helpers\WindowsHelpers.cs" />
+    <Compile Include="VideoOperations\LightCurves\CSVExportOptions.cs" />
+    <Compile Include="VideoOperations\LightCurves\frmConfigureCsvExport.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="VideoOperations\LightCurves\frmConfigureCsvExport.Designer.cs">
+      <DependentUpon>frmConfigureCsvExport.cs</DependentUpon>
+    </Compile>
     <Compile Include="VideoOperations\LightCurves\InfoForms\frmSetReferenceMag.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -692,6 +699,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Helpers\frmChooseFitsFolder.resx">
       <DependentUpon>frmChooseFitsFolder.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="VideoOperations\LightCurves\frmConfigureCsvExport.resx">
+      <DependentUpon>frmConfigureCsvExport.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="VideoOperations\LightCurves\InfoForms\frmSetReferenceMag.resx">
       <DependentUpon>frmSetReferenceMag.cs</DependentUpon>
