Made it possible to export magnitudes instead of flux in the CSV export. Now confirming the Day for the timestamp export when no day is available in the light curve. Added UI for exporting of atmospheric extinction (export not implemented yet).

--- a/Tangra 3/Tangra 3.Windows.csproj
+++ b/Tangra 3/Tangra 3.Windows.csproj
@@ -304,6 +304,12 @@
     <Compile Include="VideoOperations\LightCurves\frmConfigureCsvExport.Designer.cs">
       <DependentUpon>frmConfigureCsvExport.cs</DependentUpon>
     </Compile>
+    <Compile Include="VideoOperations\LightCurves\frmConfirmDay.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="VideoOperations\LightCurves\frmConfirmDay.Designer.cs">
+      <DependentUpon>frmConfirmDay.cs</DependentUpon>
+    </Compile>
     <Compile Include="VideoOperations\LightCurves\InfoForms\frmSetReferenceMag.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -703,6 +709,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="VideoOperations\LightCurves\frmConfigureCsvExport.resx">
       <DependentUpon>frmConfigureCsvExport.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="VideoOperations\LightCurves\frmConfirmDay.resx">
+      <DependentUpon>frmConfirmDay.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="VideoOperations\LightCurves\InfoForms\frmSetReferenceMag.resx">
       <DependentUpon>frmSetReferenceMag.cs</DependentUpon>
