--- a/Tangra 3/app.config
+++ b/Tangra 3/app.config
@@ -31,6 +31,9 @@
             <setting name="UsageStatsLastSent" serializeAs="String">
                 <value>2014-12-01</value>
             </setting>
+            <setting name="AtmExtRememberedConfig" serializeAs="String">
+                <value />
+            </setting>
         </Tangra.Properties.Settings>
     </userSettings>
     <system.serviceModel>
