--- a/Tangra 3/Properties/Settings.settings
+++ b/Tangra 3/Properties/Settings.settings
@@ -26,5 +26,8 @@
     <Setting Name="UsageStatsLastSent" Type="System.DateTime" Scope="User">
       <Value Profile="(Default)">2014-12-01</Value>
     </Setting>
+    <Setting Name="AtmExtRememberedConfig" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
