Now when loading FITS files the display mode will be automatically set to Dynamic Range and the range will be set based on the min and max pixel values of the first loaded FITS image in the sequence.

--- a/Tangra 3/Tangra 3.Windows.csproj
+++ b/Tangra 3/Tangra 3.Windows.csproj
@@ -608,6 +608,7 @@
     <Compile Include="Video\frmIntegrationDetection.Designer.cs">
       <DependentUpon>frmIntegrationDetection.cs</DependentUpon>
     </Compile>
+    <Compile Include="Video\IFITSStream.cs" />
     <Compile Include="Video\SERVideoStream.cs" />
     <Compile Include="Video\SER\frmEnterSERFileInfo.cs">
       <SubType>Form</SubType>
