Fixed a bunch of places that may try to open up a file or a url but no program may have been registered on the system to open this file/url and this may cause a crash.

--- a/Tangra 3/Tangra 3.Windows.csproj
+++ b/Tangra 3/Tangra 3.Windows.csproj
@@ -295,7 +295,7 @@
     <Compile Include="Helpers\frmChooseFitsFolder.Designer.cs">
       <DependentUpon>frmChooseFitsFolder.cs</DependentUpon>
     </Compile>
-    <Compile Include="Helpers\HttpHelper.cs" />
+    <Compile Include="Helpers\ShellHelper.cs" />
     <Compile Include="Helpers\TangraFileAssociations.cs" />
     <Compile Include="Helpers\UsageStats.cs" />
     <Compile Include="Helpers\WindowsHelpers.cs" />
