Added astrometry related add-in interfaces and some plumbing.

--- a/Tangra 3/Tangra 3.Windows.csproj
+++ b/Tangra 3/Tangra 3.Windows.csproj
@@ -114,6 +114,7 @@
     <Compile Include="Addins\frmConfirmIntegrationRate.Designer.cs">
       <DependentUpon>frmConfirmIntegrationRate.cs</DependentUpon>
     </Compile>
+    <Compile Include="Addins\MarshalByRefAstrometryProvider.cs" />
     <Compile Include="Addins\MarshalByRefLightCurveDataProvider.cs" />
     <Compile Include="Addins\SettingsStorageProvider.cs" />
     <Compile Include="Addins\SingleMeasurement.cs" />
