--- a/Tangra.SDK/Tangra.SDK.csproj
+++ b/Tangra.SDK/Tangra.SDK.csproj
@@ -81,6 +81,7 @@
   <ItemGroup>
     <Compile Include="AddinSettings.cs" />
     <Compile Include="ITangraAddin.cs" />
+    <Compile Include="ITangraAstrometricSolution.cs" />
     <Compile Include="ITangraHost.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
