Made it possible to do Aperture Photometry measurements from the PSF Viewer Form.

--- a/Tangra.Model/Tangra.Model.csproj
+++ b/Tangra.Model/Tangra.Model.csproj
@@ -94,6 +94,7 @@
     <Compile Include="Astro\AstroImage.cs" />
     <Compile Include="Astro\CCDMatrix.cs" />
     <Compile Include="Astro\DoublePSFFit.cs" />
+    <Compile Include="Astro\FakeIMeasuredObject.cs" />
     <Compile Include="Astro\IStarMap.cs" />
     <Compile Include="Astro\StarFinder.cs" />
     <Compile Include="Astro\PSFFit.cs" />
