Some fixes to Astrometry and ongoing work on the Measurement Export add-in.

--- a/Tangra.Addins/Tangra.Addins.csproj
+++ b/Tangra.Addins/Tangra.Addins.csproj
@@ -78,7 +78,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="frmConfigureAddin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmConfigureAddin.Designer.cs">
+      <DependentUpon>frmConfigureAddin.cs</DependentUpon>
+    </Compile>
     <Compile Include="MeasurementsExportAddin.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
     <Compile Include="StandardTangraAddin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -93,6 +104,18 @@
       <Name>Tangra.SDK</Name>
       <Private>False</Private>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="frmConfigureAddin.resx">
+      <DependentUpon>frmConfigureAddin.cs</DependentUpon>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
