--- a/Tangra 3/Tangra 3.Windows.csproj
+++ b/Tangra 3/Tangra 3.Windows.csproj
@@ -469,6 +469,12 @@
     <Compile Include="VideoOperations\LightCurves\frmDefineBinning.Designer.cs">
       <DependentUpon>frmDefineBinning.cs</DependentUpon>
     </Compile>
+    <Compile Include="VideoOperations\LightCurves\Helpers\frmOCRTooManyErrorsReport.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="VideoOperations\LightCurves\Helpers\frmOCRTooManyErrorsReport.Designer.cs">
+      <DependentUpon>frmOCRTooManyErrorsReport.cs</DependentUpon>
+    </Compile>
     <Compile Include="VideoOperations\LightCurves\Helpers\LCFileImagePixelProvider.cs" />
     <Compile Include="VideoOperations\LightCurves\InfoForms\frmSetReferenceMag.cs">
       <SubType>Form</SubType>
@@ -939,6 +945,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="VideoOperations\LightCurves\frmDefineBinning.resx">
       <DependentUpon>frmDefineBinning.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="VideoOperations\LightCurves\Helpers\frmOCRTooManyErrorsReport.resx">
+      <DependentUpon>frmOCRTooManyErrorsReport.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="VideoOperations\LightCurves\InfoForms\frmSetReferenceMag.resx">
       <DependentUpon>frmSetReferenceMag.cs</DependentUpon>
