--- a/Tangra 3/Tangra 3.Windows.csproj
+++ b/Tangra 3/Tangra 3.Windows.csproj
@@ -475,6 +475,12 @@
     <Compile Include="VideoOperations\LightCurves\Helpers\frmOCRTooManyErrorsReport.Designer.cs">
       <DependentUpon>frmOCRTooManyErrorsReport.cs</DependentUpon>
     </Compile>
+    <Compile Include="VideoOperations\LightCurves\Helpers\frmSetLightCurveTitle.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="VideoOperations\LightCurves\Helpers\frmSetLightCurveTitle.Designer.cs">
+      <DependentUpon>frmSetLightCurveTitle.cs</DependentUpon>
+    </Compile>
     <Compile Include="VideoOperations\LightCurves\Helpers\LCFileImagePixelProvider.cs" />
     <Compile Include="VideoOperations\LightCurves\InfoForms\frmSetReferenceMag.cs">
       <SubType>Form</SubType>
@@ -948,6 +954,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="VideoOperations\LightCurves\Helpers\frmOCRTooManyErrorsReport.resx">
       <DependentUpon>frmOCRTooManyErrorsReport.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="VideoOperations\LightCurves\Helpers\frmSetLightCurveTitle.resx">
+      <DependentUpon>frmSetLightCurveTitle.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="VideoOperations\LightCurves\InfoForms\frmSetReferenceMag.resx">
       <DependentUpon>frmSetReferenceMag.cs</DependentUpon>
